<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/FriendIdEditText" android:background="@drawable/inputbox_0" android:layout_width="400.0dp" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:hint="@string/friendid" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textColor="#a5876d" android:id="@id/InviteButton" android:background="@drawable/dlg_btn" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/invite" android:layout_weight="1.0" />
        <Button android:textColor="#a5876d" android:id="@id/ListButton" android:background="@drawable/dlg_btn" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/list" android:layout_weight="1.0" />
        <Button android:textColor="#a5876d" android:id="@id/WaitButton" android:background="@drawable/dlg_btn" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/wait" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
