<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#a5876d" android:gravity="center" android:id="@id/TitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/download_title" />
    <TextView android:textColor="#543839" android:gravity="center" android:id="@id/MessageTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/downloadfile_msg" />
    <TextView android:textColor="#543839" android:gravity="center" android:id="@id/ProgressTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dp" />
    <ProgressBar android:id="@id/ProgressBar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5.0dp" style="?android:attr/progressBarStyleHorizontal" />
    <Button android:textColor="#a5876d" android:id="@id/CancelButton" android:background="@drawable/dlg_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/downloadfile_cancel" />
</LinearLayout>
